# rust-fullstack

./: Cargo.toml  Dockerfile  Makefile.toml  README.md  docker-compose.yml  sqlx-data.json
backend/src/: main.rs
migrations/: 20220519102646_users_table.up.sql  20220519102809_admin.down.sql  20220519102809_admin.up.sql  20220519130954_todos.up.sql
src/backend/: Cargo.toml  Dockerfile  entrypoint
src/backend/src/: auth.rs  main.rs  todo.rs  user.rs
src/frontend/: Cargo.toml  Dockerfile  entrypoint  index.html
src/frontend/css/: index.css
src/frontend/src/: auth.rs  lib.rs  todo.rs
