[package]
version = "0.1.0"
name = "frontend"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.9"
chrono = { version = "0.4.19", features = ["serde"] }
serde = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
